# solana-vanity-web

./: LICENSE  README.md  app.js  download.html  index.html  robots.txt  sitemap.xml  style.css  sw.js  tatus  terms.html  test-gpu.html  worker-gpu.js  worker.js
assets/: site.webmanifest  vanity_wasm.js  vanity_wasm_bg.wasm
gpu-shaders/: base58.wgsl  curve.wgsl  field.wgsl  main.wgsl
vanity-wasm/: Cargo.toml
vanity-wasm/src/: lib.rs
