[package]
name = "vanity_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }
base58 = "0.2"
js-sys = "0.3"
curve25519-dalek = { version = "4.1", features = ["alloc"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1