[package]
name = "vanity_wasm"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3"
curve25519-dalek = { version = "4.1", default-features = false, features = ["alloc", "precomputed-tables"] }
rand_chacha = "0.3"
rand_core = "0.6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
